--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lhoraire-scheduler"]
-	path = lhoraire-scheduler
+	path = scheduler/lhoraire_scheduler
 	url = https://github.com/code-Yking/lhoraire-scheduler
